--- a/static/css/pages/layout.css
+++ b/static/css/pages/layout.css
@@ -2,7 +2,9 @@ body{
     position: absolute;
     top: 110px;
     margin: 0;
+    overflow-x: hidden;
 }
+
 
 .top-bar{
     padding: 32px 60px;
